mining boost api
